--- a/coffee_product.html
+++ b/coffee_product.html
@@ -36,7 +36,7 @@
 
       <ul class="navbar-nav ml-auto" id="sec1navbar">
 
-        <li class="navbar-item"><a class="nav-link" href="coffee_product.html">Home</a></li>
+        <li class="navbar-item"><a class="nav-link" href="Coffe-House/coffee_product.html">Home</a></li>
 
         <li class="navbar-item"><a class="nav-link" href="FRONT.html">Branches</a></li>
 
