--- a/coffee_product.html
+++ b/coffee_product.html
@@ -36,9 +36,9 @@
 
       <ul class="navbar-nav ml-auto" id="sec1navbar">
 
-        <li class="navbar-item"><a class="nav-link" href="Coffee-House/coffee_product.html">Home</a></li>
+        <li class="navbar-item"><a class="nav-link" href="/Coffee-House/coffee_product.html">Home</a></li>
 
-        <li class="navbar-item"><a class="nav-link" href="Coffee-House/FRONT.html">Branches</a></li>
+        <li class="navbar-item"><a class="nav-link" href="/Coffee-House/FRONT.html">Branches</a></li>
 
         <li class="navbar-item"><a class="nav-link" href="#">Contact Us</a></li>
 
