--- a/coffee_product.html
+++ b/coffee_product.html
@@ -26,7 +26,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-      <a class="navbar-brand" id="navbar_brand" href="#">Coffee House</a>
+      <a class="navbar-brand" id="navbar_brand" href="/Coffee-House/">Coffee House</a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
