--- a/Hsr.html
+++ b/Hsr.html
@@ -26,7 +26,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-      <a class="navbar-brand" id="navbar_brand" href="#">Coffee House</a>
+      <a class="navbar-brand" id="navbar_brand" href="/Coffee-House/">Coffee House</a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -36,9 +36,9 @@
 
       <ul class="navbar-nav ml-auto" id="sec1navbar">
 
-        <li class="navbar-item"><a class="nav-link" href="coffee_product.html">Home</a></li>
+        <li class="navbar-item"><a class="nav-link" href="/Coffee-House/coffee_product.html">Home</a></li>
 
-        <li class="navbar-item"><a class="nav-link" href="FRONT.html">Branches</a></li>
+        <li class="navbar-item"><a class="nav-link" href="/Coffee-House/FRONT.html">Branches</a></li>
 
         <li class="navbar-item"><a class="nav-link" href="#">Contact Us</a></li>
 
