--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
   <link rel="stylesheet" type="text/css" href="bootstrap.css" />
 
   <!--owl slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="/Coffee-House/stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
   <!-- nice select  -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha512-CruCP+TD3yXzlvvijET8wV5WxxEh5H8P4cmz0RFbKK6FlZ2sYl3AEsKlLPHbniXKSrDdFewhbmBK5skbdsASbQ==" crossorigin="anonymous" />
+  <link rel="/Coffee-House/stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha512-CruCP+TD3yXzlvvijET8wV5WxxEh5H8P4cmz0RFbKK6FlZ2sYl3AEsKlLPHbniXKSrDdFewhbmBK5skbdsASbQ==" crossorigin="anonymous" />
   <!-- font awesome style -->
-  <link href="font-awesome.min.css" rel="stylesheet" />
+  <link href="font-awesome.min.css" rel="/Coffee-House/stylesheet" />
 
   <!-- Custom styles for this template -->
-  <link href="/Coffee-House/style.css" rel="stylesheet" />
+  <link href="/Coffee-House/style.css" rel="/Coffee-House/stylesheet" />
   <!-- responsive style -->
-  <link href="/Coffee-House/responsive.css" rel="stylesheet" />
+  <link href="/Coffee-House/responsive.css" rel="/Coffee-House/stylesheet" />
 
 </head>
 
@@ -58,13 +58,13 @@
                 <a class="nav-link" href="/Coffee-House/index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="menu.html">Branch</a>
+                <a class="nav-link" href="/Coffee-House/menu.html">Branch</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="/Coffee-House/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="book.html">Book Table</a>
+                <a class="nav-link" href="/Coffee-House/book.html">Book Table</a>
               </li>
             </ul>
             <div class="user_option">
@@ -224,7 +224,7 @@
           <div class="col-md-6  ">
             <div class="box ">
               <div class="img-box">
-                <img src="o1.jpg" alt="">
+                <img src="/Coffee-House/o1.jpg" alt="">
               </div>
               <div class="detail-box">
                 <h5>
