--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           <div class="col-md-6  ">
             <div class="box ">
               <div class="img-box">
-                <img src="o2.jpg" alt="">
+                <img src="/Coffee-House/o2.jpg" alt="">
               </div>
               <div class="detail-box">
                 <h5>
