--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
   <title> Coffee House </title>
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/coffee-House/" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text" href="css/bootstrap.css" />
 
   <!--owl slider stylesheet -->
-  <link rel="stylesheet" type="text/coffee-House/" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
   <!-- nice select  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha512-CruCP+TD3yXzlvvijET8wV5WxxEh5H8P4cmz0RFbKK6FlZ2sYl3AEsKlLPHbniXKSrDdFewhbmBK5skbdsASbQ==" crossorigin="anonymous" />
   <!-- font awesome style -->
-  <link href="/coffee-House/font-awesome.min.css" rel="stylesheet" />
+  <link href="/Coffee-House/font-awesome.min.css" rel="stylesheet" />
 
   <!-- Custom styles for this template -->
-  <link href="/coffee-House/style.css" rel="stylesheet" />
+  <link href="/Coffee-House/style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="/coffee-House/responsive.css" rel="stylesheet" />
+  <link href="/Coffee-House/responsive.css" rel="stylesheet" />
 
 </head>
 
@@ -36,13 +36,13 @@
 
   <div class="hero_area">
     <div class="bg-box">
-      <img src="images/bg1.jpg" alt="">
+      <img src="/Coffee-House/bg1.jpg" alt="">
     </div>
     <!-- header section strats -->
     <header class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="/coffee-House/index.html">
+          <a class="navbar-brand" href="/Coffee-House/index.html">
             <span>
               Coffee House Company
             </span>
@@ -55,16 +55,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  mx-auto ">
               <li class="nav-item active">
-                <a class="nav-link" href="/coffee-House/index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/Coffee-House/index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/coffee-House/menu.html">Branch</a>
+                <a class="nav-link" href="/Coffee-House/menu.html">Branch</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/coffee-House/about.html">About</a>
+                <a class="nav-link" href="/Coffee-House/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/coffee-House/book.html">Book Table</a>
+                <a class="nav-link" href="/Coffee-House/book.html">Book Table</a>
               </li>
             </ul>
             <div class="user_option">
