--- a/index.html
+++ b/index.html
@@ -58,13 +58,10 @@
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="menu.html">Branch</a>
+                <a class="nav-link" href="branch.html">Branch</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="book.html">Book Table</a>
               </li>
             </ul>
             <div class="user_option">
@@ -224,7 +221,7 @@
           <div class="col-md-6  ">
             <div class="box ">
               <div class="img-box">
-                <img src="images/o1.jpg" alt="">
+                <img src="images/about1.jpg" alt="">
               </div>
               <div class="detail-box">
                 <h5>
@@ -293,11 +290,11 @@
           <div class="col-md-6  ">
             <div class="box ">
               <div class="img-box">
-                <img src="images/o2.jpg" alt="">
+                <img src="images/i1.jpg" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Pizza Days
+                  Sandwich Days
                 </h5>
                 <h6>
                   <span>15%</span> Off
@@ -366,67 +363,6 @@
 
   <!-- end offer section -->
 
-  <!-- book section -->
-  <section class="book_section layout_padding">
-    <div class="container">
-      <div class="heading_container">
-        <h2>
-          Book A Table
-        </h2>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form_container">
-            <form action="">
-              <div>
-                <input type="text" class="form-control" placeholder="Your Name" />
-              </div>
-              <div>
-                <input type="text" class="form-control" placeholder="Phone Number" />
-              </div>
-              <div>
-                <input type="email" class="form-control" placeholder="Your Email" />
-              </div>
-              <div>
-                <select class="form-control nice-select wide">
-                  <option value="" disabled selected>
-                    How many persons?
-                  </option>
-                  <option value="">
-                    2
-                  </option>
-                  <option value="">
-                    3
-                  </option>
-                  <option value="">
-                    4
-                  </option>
-                  <option value="">
-                    5
-                  </option>
-                </select>
-              </div>
-              <div>
-                <input type="date" class="form-control">
-              </div>
-              <div class="btn_box">
-                <button>
-                  Book Now
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="map_container ">
-            <div id="googleMap"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- end book section -->
-
   <!-- client section -->
 
   <section class="client_section layout_padding-bottom">
@@ -445,10 +381,10 @@
                   Best Coffee I ever had. Delivery was on time. You all must try.
                 </p>
                 <h6>
-                  Moana Michell
+                  Aneeta
                 </h6>
                 <p>
-                  magna aliqua
+                  Banglore
                 </p>
               </div>
               <div class="img-box">
@@ -464,10 +400,10 @@
                   looking foward to order more.
                 </p>
                 <h6>
-                  Mike Hamell
+                  Arjun
                 </h6>
                 <p>
-                  magna aliqua
+                  Banglore
                 </p>
               </div>
               <div class="img-box">
@@ -555,9 +491,9 @@
       <div class="footer-info">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a><br><br>
+          <a href="#">Company</a><br><br>
           &copy; <span id="displayYear"></span> Distributed By
-          <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
+          <a href="#" target="_blank">Coffee House Company</a>
         </p>
       </div>
     </div>
@@ -580,10 +516,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
   <!-- custom js -->
   <script src="js/custom.js"></script>
-  <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
-  </script>
-  <!-- End Google Map -->
 
 </body>
 
