--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
               </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="signup.html">Sign UP</a>
+              </li>
+
             </ul>
             <div class="user_option">
               <a href="" class="user_link">
