--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
               </a>
               <form class="form-inline">
                 <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                  <i class="fa fa-search" aria-hidden="true"></i>
+                  
+                  <a class="fa fa-search" href="productjson.html" ></a>
+                
                 </button>
               </form>
               <a href="" class="order_online">
