--- a/productjson.html
+++ b/productjson.html
@@ -153,7 +153,7 @@
         <table>
             <tr id="header">
                 <th>Id
-                    <br><input type="text" placeholder="Enter id" ng-model="search.id">
+                    <br><input type="text" align="center" placeholder="Enter id" ng-model="search.id">
                 </th>
                 <th>Product Name
                     <br><input type="text"placeholder="Enter Product name" ng-model="search.name">
