--- a/branch.html
+++ b/branch.html
@@ -184,7 +184,7 @@
             <img src="images/b1.jpg" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
-                 <a class="nav-link" href="indiranagar.html">
+                 <a class="nav-link" href="Indiranagar.html">
                 <h4>Indira Nagar</h4>
                 </a>
               </div>
