--- a/Indiranagar.html
+++ b/Indiranagar.html
@@ -46,7 +46,7 @@
          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
               <!-- bootstrap styles -->
          <!-- css styles -->
-        <link rel="stylesheet" href="/css/hsr.css">
+        <link rel="stylesheet" href="hsr.css">
            <!-- css styles -->
          <!-- Angular JS CDN     -->
          <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
@@ -129,7 +129,7 @@
       
 </div>
   </section>
-    <script src="/js/spa.js"></script>
+    <script src="spa.js"></script>
     
     </body>
 </html>
