--- a/menuInd.html
+++ b/menuInd.html
@@ -105,11 +105,11 @@
           <div class="container1"></div>
           <div class="col">
             <label for="rowsToBeDisplayed">Display</label>
-            <input type="number" class="form-control rounded w-50" step="1" min="0" max="10" ng-model="rowlimit" placeholder="number of meetings to display"/>
+            <input type="number" class="form-control rounded w-50" step="1" min="0" max="10" ng-model="rowlimit" placeholder="number of items to display"/>
           </div>
           <div class="col">
-            <label for="searchMeeting">Search Meeting</label>
-            <input type="text" class="form-control rounded w-50"  ng-model="searchmenu" placeholder="search meeting id,title,date,created by "/>
+            <label for="searchMeeting">Search Menu</label>
+            <input type="text" class="form-control rounded w-50"  ng-model="searchmenu" placeholder="search menu "/>
           </div>
         </div>
         </div>
@@ -118,11 +118,11 @@
         <table  cellpadding="2" cellspacing="2" border="2" class="table table-striped table-dark table-hover table-sm">
           <thead>
           <tr>
-            <th><input type="search" class="form-control rounded" placeholder = "Search by meeting id" aria-label="Search" aria-describedby="search-addon" ng-model="search.id"/></th>
-            <th><input type="search" class="form-control rounded" placeholder = "Search by title" aria-label="Search" aria-describedby="search-addon" ng-model="search.name"/></th>
-            <th><input type="search" class="form-control rounded" placeholder = "Search by date" aria-label="Search" aria-describedby="search-addon" ng-model="search.price"/></th>
-            <th><input type="search" class="form-control rounded" placeholder = "Search by time" aria-label="Search" aria-describedby="search-addon" ng-model="search.available"/></th>
-            <th><input type="search" class="form-control rounded" placeholder = "Search by total attendees" aria-label="Search" aria-describedby="search-addon" ng-model="search.seller"/></th>
+            <th><input type="search" class="form-control rounded" placeholder = "Search by Id" aria-label="Search" aria-describedby="search-addon" ng-model="search.id"/></th>
+            <th><input type="search" class="form-control rounded" placeholder = "Search by name" aria-label="Search" aria-describedby="search-addon" ng-model="search.name"/></th>
+            <th><input type="search" class="form-control rounded" placeholder = "Search by price" aria-label="Search" aria-describedby="search-addon" ng-model="search.price"/></th>
+            <th><input type="search" class="form-control rounded" placeholder = "Search by Available" aria-label="Search" aria-describedby="search-addon" ng-model="search.available"/></th>
+            <th><input type="search" class="form-control rounded" placeholder = "Search by seller" aria-label="Search" aria-describedby="search-addon" ng-model="search.seller"/></th>
             
           </tr>
             <tr>
